Fixed Java 17 compatibility issues